2001-05-17  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl: make check for actual tkcon root existence to allow
	for setting the var ($::tkcon::PRIV(root)) in controlling apps to
	better control the root window.

2001-05-04  Jeff Hobbs  <jeffh@ActiveState.com>

	* docs/style.css: new file for html files to use.
	* README.txt:
	* index.html:
	* doc/*: updated for 2.1 release.

	* tkcon.tcl: allowed 'tkcon font ...' and 'tkcon buffer ...' to
	work before the main console have been created.
	Changed "TkCon" -> "tkcon", updated for new release.

2001-03-28  Jeff Hobbs  <jeffh@activestate.com>

	* tkcon.tcl (::tkcon::Init): added safe interp check around 'cd'
	call for Macs

2000-10-30  Jeff Hobbs  <hobbs@ajubasolutions.com>

	* tkcon.tcl (dir): fixed bug where permissions wouldn't print
	correctly if user had no permissions. (kuchler)

2000-10-18  Jeff Hobbs  <hobbs@ajubasolutions.com>

	* tkcon.tcl (::tkcon::NamespacesList): corrected to not use window
	starting with an uppercase letter (error). (reins)

2000-09-27  Jeff Hobbs  <hobbs@scriptics.com>

	* tkcon.tcl (::tkcon::About): added 'variable COLOR' decl (Zaers).

2000-09-20  Jeff Hobbs  <hobbs@scriptics.com>

	* tkcon.tcl (InitMenus): restricted the Attach Socket
	functionality to Tcl 8.3+ due to use of [file channels].
	(InitUI): fixed Configure binding to use correct namespace for OPT
	(EvalSocket, EvalSend, EvalAttached): cleaned up to require that
	they accept only one arg as the command string to be evaluated.
	Prior behavior left some ambiguity as to what was eval'ed where.
	EvalOther, EvalSlave may need some sanitation as well.
	(EvalCmd): Changed EvalSocket functionality to have the \'s
	substituted before sending data, to allow for special chars to be
	added to the string.

2000-09-19  Jeff Hobbs  <hobbs@scriptics.com>

	* tkcon.tcl (::tkcon::InitUI): corrected plugin handling, as 'wm
	withdraw' worked, but 'wm deiconify' was disallowed.

	* docs/plugin.html: updated link to plugin source